fixed too hard clipping on unfinished tasks

--- a/src/app/client/context/tasks/taskContentSociocortex/taskContentSociocortex.component.css
+++ b/src/app/client/context/tasks/taskContentSociocortex/taskContentSociocortex.component.css
@@ -35,7 +35,3 @@
 .last-param {
   margin-bottom: -16px;
 }
-
-.last-param > div {
-  padding-bottom: 0;
-}
